<resources>
    <string name="app_name">随堂签到</string>

    <string name="title_activity_main">SamG_CheckInApp</string>
    <string name="btn">--签到--</string>
    <string name="txt1">姓名*</string>
    <string name="txt4">学号*</string>
    <string name="editText1">请输入姓名</string>
    <string name="editText2">请输入学号</string>
    <string name="radioBtn1">男</string>
    <string name="radioBtn2">女</string>
    <string name="btn1">清除数据</string>
    <string name="btnList">签到列表</string>
</resources>
